aggiunta form footer

--- a/index.html
+++ b/index.html
@@ -46,6 +46,14 @@
             <li class="last"><span class="x">&#x2718;</span>  Hompage refresh <span class="website">Website</span></li>
           </ul>
         </div>
+
+        <footer>
+          <form class="mailbox" action="index.html" method="post">
+            <input class="mail" type="email" name="" value="">
+            <button class="click submit" type="button" name="button">Submit</button>
+          </form>
+
+        </footer>
       </div>
     </main>
   </body>
